# Cauldron

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  NOTICES.txt  common.cmake  readme.md
libs/: DirectXMath.cmake  (+1 more)
libs/AGS/: CMakeLists.txt  amd_ags.h  amd_ags_x64.lib
libs/DX12AgilitySDK/: CMakeLists.txt
libs/DX12AgilitySDK/1.600.10/include/: d3d12.h  d3d12.idl  d3d12sdklayers.h  d3d12sdklayers.idl
libs/DXC/: CMakeLists.txt
libs/WinPixEventRuntime/: CMakeLists.txt  license.txt
src/DX12/: CMakeLists.txt  readme.md  stdafx.h
src/DX12/GLTF/: GLTFTexturesAndBuffers.cpp  GLTFTexturesAndBuffers.h  GLTFTexturesAndBuffersDecl.inl  GLTFTexturesAndBuffersImpl.inl  GltfBBoxPass.cpp  GltfBBoxPass.h  GltfDepthPass.cpp  GltfDepthPass.h  GltfHelpers.cpp  GltfHelpers.h  GltfMotionVectorsPass.cpp  GltfMotionVectorsPass.h  GltfPbrPass.cpp  GltfPbrPass.h  GltfRasterizerPass.cpp  GltfRasterizerPass.h  glTFHelpers.cpp  glTFHelpers.h
src/DX12/PostProc/: BakeSkinning.cpp  BakeSkinning.h  Bloom.cpp  Bloom.h  BlurPS.cpp  BlurPS.h  ColorConversionPS.cpp  ColorConversionPS.h  Debug.cpp  Debug.h  DownSamplePS.cpp  DownSamplePS.h  MagnifierPS.cpp  MagnifierPS.h  PostProcCS.cpp  PostProcCS.h  PostProcPS.cpp  PostProcPS.h  ShadowResolvePass.cpp  ShadowResolvePass.h  Sharpen.cpp  Sharpen.h  SkyDome.cpp  SkyDome.h  SkyDomeProc.cpp  SkyDomeProc.h  TAA.cpp  TAA.h  Tonemapping.cpp  Tonemapping.h  TonemappingCS.cpp  TonemappingCS.h
src/DX12/base/: Buffer.cpp  Buffer.h  CommandListRing.cpp  CommandListRing.h  Device.cpp  Device.h  DynamicBufferRing.cpp  DynamicBufferRing.h  Fence.cpp  Fence.h  FrameworkWindows.cpp  FrameworkWindows.h  Freesync2.cpp  Freesync2.h  FreesyncHDR.cpp  FreesyncHDR.h  GBuffer.cpp  GBuffer.h  GPUTimestamps.cpp  GPUTimestamps.h  Helper.cpp  Helper.h  Imgui.cpp  Imgui.h  ResourceViewHeaps.cpp  ResourceViewHeaps.h  SaveTexture.cpp  SaveTexture.h  ShaderCompilerHelper.cpp  ShaderCompilerHelper.h  StaticBufferPool.cpp  StaticBufferPool.h  StaticConstantBufferPool.cpp  StaticConstantBufferPool.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UploadHeap.cpp  UploadHeap.h  (+4 more)
src/DX12/shaders/: BakeSkinning.hlsl  ColorConversionPS.hlsl  Debug.hlsl  DownSamplePS.hlsl  GLTFDepthPass.hlsl  GLTFMotionVectorsPass.hlsl  GLTFNormals.hlsl  GLTFPBRLighting.hlsl  GLTFPbrPass-IO.h  GLTFPbrPass-IO.hlsl  GLTFPbrPass-PS.hlsl  GLTFPbrPass-VS.hlsl  GLTFVertexFactory.hlsl  HighZPyramidCS.hlsl  LPMTonemapperHelper.hlsl  MagnifierPS.hlsl  PBRPixelParams.hlsl  PBRTextures.hlsl  PixelParams.hlsl  RasterizerEI.hlsl  RasterizerEI_hg.hlsl  RasterizerMS.hlsl  RasterizerMS_hg.hlsl  RasterizerWG.hlsl  RasterizerWG_hg.hlsl  Rasterizer_common.h  ShadowResolve.hlsl  Skinning.hlsl  SkyDome.hlsl  SkyDomeProc.hlsl  TAASharpenerCS.hlsl  Tonemappers.hlsl  Tonemapping.hlsl  TonemappingCS.hlsl  blend.hlsl  blur.hlsl  common.h  functions.hlsl  motionBlur.hlsl  perFrameStruct.h  (+5 more)
src/DX12/widgets/: Wireframe.cpp  Wireframe.h  WireframeBox.h  WireframeSphere.h
src/VK/: CMakeLists.txt  stdafx.h
src/VK/GLTF/: GLTFTexturesAndBuffers.cpp  GLTFTexturesAndBuffers.h  GltfBBoxPass.cpp  GltfBBoxPass.h  GltfDepthPass.cpp  GltfDepthPass.h  GltfHelpers.cpp  GltfHelpers.h  GltfMotionVectorsPass.cpp  GltfMotionVectorsPass.h  GltfPbrPass.cpp  GltfPbrPass.h  glTFHelpers.cpp  glTFHelpers.h
src/VK/PostProc/: Bloom.cpp  Bloom.h  BlurPS.cpp  BlurPS.h  ColorConversionPS.cpp  ColorConversionPS.h  DownSamplePS.cpp  DownSamplePS.h  MagnifierPS.cpp  MagnifierPS.h  PostProcCS.cpp  PostProcCS.h  PostProcPS.cpp  PostProcPS.h  SkyDome.cpp  SkyDome.h  SkyDomeProc.cpp  SkyDomeProc.h  TAA.cpp  TAA.h  Tonemapping.cpp  Tonemapping.h  TonemappingCS.cpp  TonemappingCS.h
src/VK/base/: CommandListRing.cpp  CommandListRing.h  DebugMarkersExt.cpp  DebugMarkersExt.h  Device.cpp  Device.h  DeviceProperties.cpp  DeviceProperties.h  DynamicBufferRing.cpp  DynamicBufferRing.h  ExtDebugMarkers.cpp  ExtDebugMarkers.h  ExtDebugUtils.cpp  ExtDebugUtils.h  ExtFp16.cpp  ExtFp16.h  ExtFreeSync2.cpp  ExtFreeSync2.h  ExtFreeSyncHDR.cpp  ExtFreeSyncHDR.h  ExtGPUValidation.cpp  ExtGPUValidation.h  ExtRayTracing.cpp  ExtRayTracing.h  ExtVRS.cpp  ExtVRS.h  ExtValidation.cpp  ExtValidation.h  FrameworkWindows.cpp  FrameworkWindows.h  FreeSync2.cpp  FreeSync2.h  FreeSyncHDR.cpp  FreeSyncHDR.h  GBuffer.cpp  GBuffer.h  GPUTimestamps.cpp  GPUTimestamps.h  Helper.cpp  Helper.h  (+20 more)
src/VK/shaders/: ColorConversionPS.glsl  GLTFDepthPass-frag.glsl  GLTFDepthPass-vert.glsl  GLTFMotionVectorsPass-frag.glsl  GLTFMotionVectorsPass-vert.glsl  GLTFPBRLighting.h  GLTFPbrPass-frag.glsl  GLTFPbrPass-vert.glsl  GLTFVertexFactory.glsl  GLTF_VS2PS_IO.glsl  LPMTonemapperHelper.glsl  MagnifierPS.glsl  PBRTextures.glsl  PixelParams.glsl  SkyDome.glsl  SkyDome.hlsl  SkyDomeProc.glsl  SkyDomeProc.hlsl  TAA.hlsl  TAASharpenerCS.hlsl  blur.glsl  functions.glsl  glTF20-IO.glsl  perFrameStruct.h  shadowFiltering.h  skinning.h  textures.glsl  tonemappers.glsl  tonemapping.glsl  tonemappingCS.glsl  transferFunction.h
src/VK/widgets/: Axis.cpp  Axis.h  CheckerBoardFloor.cpp  CheckerboardFloor.h  Wireframe.cpp  Wireframe.h  WireframeBox.h  WireframeSphere.h
src/common/: CMakeLists.txt  stdafx.h
src/common/GLTF/: GltfCommon.cpp  GltfCommon.h  GltfHelpers.cpp  GltfHelpers.h  GltfPbrMaterial.cpp  GltfPbrMaterial.h  GltfStructures.h  glTFHelpers.cpp
src/common/Icon/: resource.h
src/common/Misc/: Async.cpp  Async.h  AsyncCache.h  CPUUserMarkers.h  Cache.cpp  Cache.h  Camera.cpp  Camera.h  ColorConversion.cpp  ColorConversion.h  DDSLoader.cpp  DDSLoader.h  DxgiFormatHelper.cpp  DxgiFormatHelper.h  Error.cpp  Error.h  FrameworkWindows.cpp  FrameworkWindows.h  Hash.cpp  Hash.h  ImgLoader.cpp  ImgLoader.h  Misc.cpp  Misc.h  Ring.h  ThreadPool.cpp  ThreadPool.h  WICLoader.cpp  WICLoader.h  WirePrimitive.h  WirePrimitives.cpp  WirePrimitives.h  threadpool.h
src/common/base/: Benchmark.cpp  Benchmark.h  DXCHelper.cpp  DXCHelper.h  ImGuiHelper.cpp  ImGuiHelper.h  Profile.cpp  Profile.h  Sequence.cpp  Sequence.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerCache.cpp  ShaderCompilerCache.h
(+29 files in other folders)
